overflow on a tablet fix(?)

--- a/static/index.css
+++ b/static/index.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    overflow-x: hidden;
+    overflow: hidden;
     flex-direction: column;
     margin: 0;
     font-family: Calibri, Arial, sans-serif;
